--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,19 @@
         "Laravel",
         "Licensing system"
     ],
+    "authors": [
+        {
+            "name": "Sribna",
+            "role": "Developer"
+        },
+        {
+            "name": "Agung Sugiarto",
+            "email": "me.agungsugiarto@gmail.com",
+            "role": "Developer"
+        }
+    ],
     "require": {
-        "illuminate/support": "^7.0|^8.0|^9.0"
+        "illuminate/support": "^8.0|^9.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.4",
