--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         }
     ],
     "require": {
-        "illuminate/support": "^8.0|^9.0"
+        "illuminate/support": "^8.0|^9.0",
+        "spatie/laravel-sluggable": "^2.6"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.4",
